@@ -312,7 +312,8 @@ class _DiffEngine {
         }
         $matches = $ymatches[$line];
         reset($matches);
-        while (list ($junk, $y) = each($matches)) {
+        while ($y = current($matches)) {
+          next($matches);
           if (empty($this->in_seq[$y])) {
             $k = $this->_lcs_pos($y);
             USE_ASSERTS && assert($k > 0);
@@ -320,7 +321,8 @@ class _DiffEngine {
             break;
           }
         }
-        while (list ($junk, $y) = each($matches)) {
+        while ($y = current($matches)) {
+          next($matches);
           if ($y > $this->seq[$k-1]) {
             USE_ASSERTS && assert($y < $this->seq[$k]);
             // Optimization: this is a common case:
@@ -454,7 +456,7 @@ class _DiffEngine {
     $i = 0;
     $j = 0;
 
-    USE_ASSERTS && assert('sizeof($lines) == sizeof($changed)');
+    USE_ASSERTS && assert(sizeof($lines) == sizeof($changed));
     $len = sizeof($lines);
     $other_len = sizeof($other_changed);
 
@@ -474,7 +476,7 @@ class _DiffEngine {
         $j++;
       }
       while ($i < $len && ! $changed[$i]) {
-        USE_ASSERTS && assert('$j < $other_len && ! $other_changed[$j]');
+        USE_ASSERTS && assert($j < $other_len && ! $other_changed[$j]);
         $i++;
         $j++;
         while ($j < $other_len && $other_changed[$j]) {
@@ -510,11 +512,11 @@ class _DiffEngine {
           while ($start > 0 && $changed[$start - 1]) {
             $start--;
           }
-          USE_ASSERTS && assert('$j > 0');
+          USE_ASSERTS && assert($j > 0);
           while ($other_changed[--$j]) {
             continue;
           }
-          USE_ASSERTS && assert('$j >= 0 && !$other_changed[$j]');
+          USE_ASSERTS && assert($j >= 0 && !$other_changed[$j]);
         }
 
         /*
@@ -537,7 +539,7 @@ class _DiffEngine {
           while ($i < $len && $changed[$i]) {
             $i++;
           }
-          USE_ASSERTS && assert('$j < $other_len && ! $other_changed[$j]');
+          USE_ASSERTS && assert($j < $other_len && ! $other_changed[$j]);
           $j++;
           if ($j < $other_len && $other_changed[$j]) {
             $corresponding = $i;
@@ -555,11 +557,11 @@ class _DiffEngine {
       while ($corresponding < $i) {
         $changed[--$start] = 1;
         $changed[--$i] = 0;
-        USE_ASSERTS && assert('$j > 0');
+        USE_ASSERTS && assert($j > 0);
         while ($other_changed[--$j]) {
           continue;
         }
-        USE_ASSERTS && assert('$j >= 0 && !$other_changed[$j]');
+        USE_ASSERTS && assert($j >= 0 && !$other_changed[$j]);
       }
     }
   }
@@ -742,8 +744,8 @@ class MappedDiff extends Diff {
    *  have the same number of elements as $to_lines.
    */
   function __construct($from_lines, $to_lines, $mapped_from_lines, $mapped_to_lines) {
-    assert(sizeof($from_lines) == sizeof($mapped_from_lines));
-    assert(sizeof($to_lines) == sizeof($mapped_to_lines));
+    USE_ASSERTS && assert(sizeof($from_lines) == sizeof($mapped_from_lines));
+    USE_ASSERTS && assert(sizeof($to_lines) == sizeof($mapped_to_lines));
 
     parent::__construct($mapped_from_lines, $mapped_to_lines);
 
@@ -1000,7 +1002,7 @@ class _HWLDF_WordAccumulator {
         $this->_flushLine($tag);
         $word = drupal_substr($word, 1);
       }
-      assert(!strstr($word, "\n"));
+      USE_ASSERTS && assert(!strstr($word, "\n"));
       $this->_group .= $word;
     }
   }
