@@ -21,9 +21,8 @@ files[] = tests/pathauto.test
 files[] = tests/redirect.test
 files[] = tests/transliteration.test
 
-; Information added by Drupal.org packaging script on 2015-11-17
-version = "7.x-1.0"
+; Information added by Drupal.org packaging script on 2018-08-14
+version = "7.x-1.1"
 core = "7.x"
 project = "filefield_paths"
-datestamp = "1447729442"
-
+datestamp = "1534256584"
