@@ -5,9 +5,8 @@ dependencies[] = filefield_paths
 core = 7.x
 hidden = TRUE
 
-; Information added by Drupal.org packaging script on 2015-11-17
-version = "7.x-1.0"
+; Information added by Drupal.org packaging script on 2018-08-14
+version = "7.x-1.1"
 core = "7.x"
 project = "filefield_paths"
-datestamp = "1447729442"
-
+datestamp = "1534256584"
