@@ -1,3 +1,11 @@
+File (Field) Paths 7.x-1.1, 2018-08-14
+--------------------------------------------------------------------------------
+
+- Fixed security issue
+- #2643026: Fixed issue when anonymous function not created.
+
+
+
 File (Field) Paths 7.x-1.0, 2015-11-17
 --------------------------------------------------------------------------------
 
